# kudwa-ai

./: .dockerignore  AI Engineer x Kudwa Take-Home Test 24a14e124c6780a68e6cdcdeb5442fdf.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  RENDER_DEPLOYMENT.md  analyze_data.py  data1.py  db.py  db_inspector.py  db_utils.py  demo_financial_mcp.py  docker-compose.yml  example_financial_chat.py  financial_data.db  financial_reports.db  frontend.py  frontend_backup.py  frontend_new.py  ingest.py  ingestt.py  main.py  pyproject.toml  query_data.py  readme.md  render.yaml  run_all.sh  run_frontend.sh  schema.py  test_financial_mcp.py  test_schema.py  versionbeforeinjest.py
AI Engineer x Kudwa Take-Home Test 24a14e124c6780a68e6cdcdeb5442fdf/: ingest.py
data/: models.py  modvvvels.py
mcpagent/: __init__.py  client.py  server.py
routers/: routes.py
tomato/: __init__.py  client.py  deleted_functions.py  server.py  test_filtering.py
