[project]
name = "kudwa-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "openai>=1.99.6",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.42",
    "sqlglot>=27.6.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
